assets/css/style.css
/* ... */
.form-left {
  background-color: var(--eerie-black-2);
  position: relative;
}

.form-left h2 {
  margin-block-start: 0;
  margin-block-end: 30px;
  padding-block-start: 0;
  padding-block-end: 0;
  text-align: center;
  color: var(--white);
  font-size: var(--fontSize-headline-1);
  line-height: var(--lineHeight-2);
  display: block;
  visibility: visible;
  opacity: 1;
  position: relative;
  z-index: 1;
}

.form-left .input-wrapper {
  margin-block-end: 20px;
}

.form-left .input-wrapper:last-of-type {
  margin-block-end: 25px;
}

.input-field[type="date"] {
  text-transform: uppercase;
  padding-inline-end: 10px;
}

.input-field[type="date"]::-webkit-calendar-picker-indicator {
  opacity: 0;
}

textarea.input-field {
  resize: none;
  height: 140px;
  padding-block: 15px;
  padding-inline: 20px;
  line-height: var(--lineHeight-4);
  font-family: var(--fontFamily-dm_sans);
  border-radius: 8px;
  margin-block-end: 25px;
}

.form-left .btn {
  max-width: 100%;
  width: 100%;
  margin-block-start: 10px;
  padding: 16px 30px;
  font-size: var(--fontSize-label-2);
  min-height: 52px;
}

.form-right {
  background-repeat: repeat;
  background-position: top left;
  background-color: var(--smoky-black-2);
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.form-right h2 {
  margin-block-end: 30px;
}

.form-right .separator {
  margin-block: 25px;
}

/*-----------------------------------*\
  #FEATURES
\*-----------------------------------*/

.features .section-title {
  margin-block-end: 40px;
}

.feature-card {
  padding: 30px 20px 40px;
  height: 100%;
}

.feature-item:nth-child(2n + 1) .feature-card {
  background-color: var(--eerie-black-3);
}

.feature-item:nth-child(2n) .feature-card {
  background-color: var(--smoky-black-3);
}

.feature-card .card-icon {
  max-width: max-content;
  margin-inline: auto;
  transition: var(--transition-2);
}

.feature-card:hover .card-icon {
  transform: scale(-1) rotate(180deg);
}

.feature-card .card-title {
  margin-block: 20px;
}

.feature-card .card-text {
  color: var(--quick-silver);
  line-height: var(--lineHeight-6);
}

/*-----------------------------------*\
  #EVENT
\*-----------------------------------*/

.event .section-title {
  margin-block-end: 40px;
}

.event-card {
  position: relative;
  overflow: hidden;
}

.event-card .card-content {
  background-image: var(--gradient-1);
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 35px 35px 25px;
}

.event-card .publish-date {
  position: absolute;
  top: 30px;
  left: 25px;
  padding: 5px 10px;
  color: var(--gold-crayola);
  background-color: var(--black);
  font-weight: var(--weight-bold);
  letter-spacing: var(--letterSpacing-1);
  line-height: 14px;
}

.event-card .card-subtitle {
  color: var(--gold-crayola);
  text-transform: uppercase;
  font-weight: var(--weight-bold);
  letter-spacing: var(--letterSpacing-2);
  margin-block-end: 5px;
}

.event-card .card-banner .img-cover {
  transition: var(--transition-2);
}

.event-card:is(:hover, :focus-within) .img-cover {
  transform: scale(1.05);
}

.event .btn {
  margin-inline: auto;
  margin-block-start: 40px;
}

/*-----------------------------------*\
  #FOOTER
\*-----------------------------------*/

.footer-top {
  margin-block-end: 70px;
}

.footer {
  position: relative;
  width: 100%;
  max-width: 100vw;
  overflow-x: hidden;
  min-height: auto;
}

.footer-brand {
  position: relative;
  padding: 50px 40px;
  background: var(--smoky-black-1) url("../images/footer-form-bg.png");
  background-position: center top;
  background-repeat: repeat;
}

.footer-brand::before,
.footer-brand::after {
  top: 0;
  width: 15px;
  height: 100%;
  background-image: url("../images/footer-form-pattern.svg");
}

.footer-brand::before {
  left: 0;
}

.footer-brand::after {
  right: 0;
}

.footer-brand .logo {
  max-width: max-content;
  margin-inline: auto;
  margin-block-end: 40px;
}

.footer-brand :is(.body-4, .label-1) {
  color: var(--quick-silver);
  line-height: var(--lineHeight-3);
}

.footer-brand .contact-link {
  margin-block: 6px;
  transition: var(--transition-1);
}

.footer-brand .contact-link:is(:hover, :focus-visible) {
  color: var(--gold-crayola);
}

.footer-brand .wrapper {
  display: flex;
  justify-content: center;
  gap: 2px;
  margin-block: 40px 25px;
}

.footer-brand .separator {
  animation: rotate360 15s linear infinite;
}

.footer-brand .label-1 {
  margin-block-end: 30px;
}

.footer-brand .label-1 .span {
  display: inline;
  color: var(--white);
}

.footer-brand .icon-wrapper .input-field {
  cursor: text;
}

.footer-brand .btn {
  min-width: 100%;
}

.footer-list {
  display: grid;
  gap: 20px;
}

.footer-link {
  color: var(--quick-silver);
  font-weight: var(--weight-bold);
  text-transform: uppercase;
  letter-spacing: var(--letterSpacing-4);
  margin-inline: auto;
  transition: var(--transition-1);
}

.footer-link:is(:hover, :focus-visible) {
  color: var(--gold-crayola);
}

.copyright {
  color: var(--quick-silver);
  line-height: var(--lineHeight-3);
}

.copyright .link {
  display: inline;
  color: var(--gold-crayola);
  text-decoration: underline;
}

/*-----------------------------------*\
  #BACK TO TOP
\*-----------------------------------*/

.back-top-btn {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background-color: var(--gold-crayola);
  color: var(--smoky-black-1);
  font-size: 22px;
  width: 50px;
  height: 50px;
  border-radius: var(--radius-circle);
  display: grid;
  place-items: center;
  box-shadow: var(--shadow-1);
  transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
  opacity: 0;
  visibility: hidden;
  z-index: 50;
  pointer-events: none;
  cursor: pointer;
}

.back-top-btn:is(:hover, :focus-visible) {
  background-color: var(--white);
  color: var(--gold-crayola);
  transform: translateY(-3px);
}

.back-top-btn.active {
  opacity: 1;
  visibility: visible;
  pointer-events: all;
}
/* ... */

